完善发现、购物、账号设置等功能